# lm-score

./: .env  .env.example  .gitignore  BENCHMARK.md  DESIGN.md  MISC.md  README.md  company.db  pyproject.toml
analysis/: viz.py
src/lm_score/: __init__.py  create_db.py  lm_score.py  main.py
src/server/: chat.template  server.sh
tests/: benchmark_lm_score.py  test_lm_score.py
